# nexus-agent

./: .gitignore  LICENSE  README.md  before_nexus.txt  environment.yml  installed_packages.txt  known_issues.md  main.py  pyproject.toml  unsloth_compiled_cache
app/: main.py  rag.py  utils.py
app/agent/: agent.py  agent_action.py  agent_decision.py  agent_state.py  parser.py  planner.py  react_planner.py  response_generator.py  tool_argument_extractor.py  tool_call.py  tool_caller.py  tool_parser.py  tool_router.py
app/api/: chat.py
app/application/: application_container.py  chat_use_case.py  conversation_use_case.py
app/contracts/: agent_decision.py  tool_call.py
app/core/: agent_context.py  app.py  container.py
app/graph/: state.py  workflow.py
app/llm/: base.py  generation_config.py  prompt_builder.py  prompts.py  tool_schema.py  unsloth_vlm.py
app/memory/: base.py  conversation_service.py  conversation_store.py  extractor.py  faiss_store.py  manager.py  memory_faiss_store.py  reranker.py  sqlite_store.py
app/models/: base.py  base_cross_encoder.py  base_embedding.py  cross_encoder_manager.py  embedding_manager.py  factory.py  model_manager.py  qwen.py  unsloth_model.py  (+1 more)
app/rag/: loader.py
configs/: agent_settings.py  base_settings.py  knowledge_settings.py  model_settings.py  models.yaml  vision_pipeline_settings.py
docs/: error_handling.md  phase1.md  roadmap.md  searxng_setup.md
tests/: agent_planner_test.py  agent_test.py  test_rag.py  tool_parser_test.py  tool_test.py
ui/: README.md  package-lock.json  package.json  tailwind.config.js
(+152 files in other folders)
